--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
         nav {
             background-color: #fff;
-            padding: 10px 100px;
+            padding: 20px 10%;
         }
         nav a {
             display: block;
