--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>kaitaishinsho</title>
     <style>
         body {
-            font-family: 'SF Mono', 'Menlo', monospace;
+            font-family: Arial 'SF Mono', 'Menlo', monospace;
             margin: 0;
             padding: 0;
         }
@@ -30,6 +30,7 @@
             background-color: #F5F6F6;
         }
         div {
+          font-family: 'SF Mono', 'Menlo', monospace;
           margin: 0;
           padding: 5px 10px;
           /*background-color: #0366D6;*/
