--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
           <h3 id="sectiona"># a</h3>
           <hr>
           <ul><b>
-            <li><a href="command/accessdb">accessdb</a></li>
             <li><a href="command/aa-enabled">aa-enabled</a></li>
             <li><a href="command/aa-exec">aa-exec</a></li>
             <li><a href="command/aa-status">aa-status</a></li>
             <li><a href="command/aa-teardown">aa-teardown</a></li>
+            <li><a href="command/accessdb">accessdb</a></li>
             <li><a href="command/apparmor_status">apparmor_status</a></li>
             <li><a href="command/apt">apt</a></li>
             <li><a href="command/apt-mark">apt-mark</a></li>
@@ -96,6 +96,7 @@
           <hr>
           <ul><b>
             <li><a href="command/cat">cat</a></li>
+            <li><a href="command/cd">cd</a></li>
             <li><a href="command/chmod">chmod</a></li>
             <li><a href="command/chown">chown</a></li>
           </b></ul>
@@ -109,12 +110,15 @@
             <li><a href="command/dircolors">dircolors</a></li>
             <li><a href="command/dirname">dirname</a></li>
             <li><a href="command/dmesg">dmesg</a></li>
+            <li><a href="command/dmidecode">dmidecode</a></li>
+            <li><a href="command/dnsdomainname">dnsdomainname</a></li>
+            <li><a href="command/do-release-upgrade">do-release-upgrade</a></li>
             <li><a href="command/domainname">domainname</a></li>
             <li><a href="command/dosfsck">dosfsck</a></li>
             <li><a href="command/dosfslabel">dosfslabel</a></li>
-            <li><a href="command/dumpkeys">dumpkeys</a></li>
-            <li><a href="command/dumpe2fs">dumpe2fs</a></li>
             <li><a href="command/du">du</a></li>
+            <li><a href="command/dumpe2fs">dumpe2fs</a></li>
+            <li><a href="command/dumpkeys">dumpkeys</a></li>
           </b></ul>
         </div>
         <div id="content">
@@ -136,13 +140,14 @@
           <h3># g</h3>
           <hr>
           <ul><b>
+            <li><a href="command/grub-mkrelpath">grub-mkrelpath</a></li>
             <li><a href="command/gs">gs</a></li>
             <li><a href="command/gsbj">gsbj</a></li>
             <li><a href="command/gsdj">gsdj</a></li>
             <li><a href="command/gsdj500">gsdj500</a></li>
-            <li><a href="command/gsnd">gsnd</a></li>
             <li><a href="command/gslj">gslj</a></li>
             <li><a href="command/gslp">gslp</a></li>
+            <li><a href="command/gsnd">gsnd</a></li>
             <li><a href="command/gst-device-monitor-1.0">gst-device-monitor-1.0</a></li>
             <li><a href="command/gst-discoverer-1.0">gst-discoverer-1.0</a></li>
             <li><a href="command/gst-inspect-1.0">gst-inspect-1.0</a></li>
@@ -150,7 +155,6 @@
             <li><a href="command/gst-play-1.0">gst-play-1.0</a></li>
             <li><a href="command/gst-typefind-1.0">gst-typefind-1.0</a></li>
             <li><a href="command/gunzip">gunzip</a></li>
-            <li><a href="command/grub-mkrelpath">grub-mkrelpath</a></li>
             <li><a href="command/gzip">gzip</a></li>
           </b></ul>
         </div>
@@ -182,6 +186,7 @@
           <h3># l</h3>
           <hr>
           <b><ul>
+            <li><a href="command/ls">ls</a></li>
           </ul></b>
         </div>
         <div id="content">
@@ -210,20 +215,21 @@
         <h3># p</h3>
         <hr>
         <ul><b>
-          <li><a href="command/ptar">ptar</a></li>
-          <li><a href="command/ptardiff">ptardiff</a></li>
-          <li><a href="command/ptargrep">ptargrep</a></li>
           <li><a href="command/psicc">psicc</a></li>
           <li><a href="command/pslog">pslog</a></li>
           <li><a href="command/pstree">pstree</a></li>
+          <li><a href="command/ptar">ptar</a></li>
+          <li><a href="command/ptardiff">ptardiff</a></li>
+          <li><a href="command/ptargrep">ptargrep</a></li>
+          <li><a href="command/ptx">ptx</a></li>
+          <li><a href="command/pwck">pwck</a></li>
+          <li><a href="command/pwconv">pwconv</a></li>
+          <li><a href="command/pwd">pwd</a></li>
+          <li><a href="command/pwdx">pwdx</a></li>
+          <li><a href="command/pwunconv">pwunconv</a></li>
           <li><a href="command/py3compile">py3compile</a></li>
           <li><a href="command/pydoc3">pydoc3</a></li>
           <li><a href="command/pyton3">pyton3</a></li>
-          <li><a href="command/pwd">pwd</a></li>
-          <li><a href="command/pwdx">pwdx</a></li>
-          <li><a href="command/pwck">pwck</a></li>
-          <li><a href="command/pwconv">pwconv</a></li>
-          <li><a href="command/pwunconv">pwunconv</a></li>
         </b></ul>
         </div>
         <div id="content">
@@ -236,8 +242,8 @@
           <h3># r</h3>
           <hr>
           <ul><b>
-            <li><a href="command/realpath">realpath</a></li>
             <li><a href="command/rbash">rbash</a></li>
+            <li><a href="command/realpath">realpath</a></li>
           </b></ul>
         </div>
         <div id="content">
@@ -251,15 +257,16 @@
           <h3># t</h3>
           <hr>
           <ul><b>
-            <li><a href="command/tload">tload</a></li>
-            <li><a href="command/tlz">tlz</a></li>
-            <li><a href="command/tmux">tmux</a></li>
-            <li><a href="command/touch">touch</a></li>
-            <li><a href="command/top">top</a></li>
-            <li><a href="command/tipc">tipc</a></li>
+            <li><a href="command/timedatectl">timedatectl</a></li>
             <li><a href="command/timeout">timeout</a></li>
+            <li><a href="command/tipc">tipc</a></li>
+            <li><a href="command/tload">tload</a></li>
+            <li><a href="command/top">top</a></li>
+            <li><a href="command/touch">touch</a></li>
             <li><a href="command/tr">tr</a></li>
             <li><a href="command/tzselect">tzselect</a></li>
+            <!-- <li><a href="command/tlz">tlz</a></li>
+            <li><a href="command/tmux">tmux</a></li> -->
           </b></ul>
         </div>
         <div id="content">
