add sudo and curl

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             <li><a href="command/cd">cd</a></li>
             <li><a href="command/chmod">chmod</a></li>
             <li><a href="command/chown">chown</a></li>
+            <li><a href="command/curl">curl</a></li>
           </b></ul>
         </div>
         <div id="content">
@@ -251,6 +252,7 @@
           <hr>
           <ul><b>
             <li><a href="command/sort">sort</a></li>
+            <li><a href="command/sudo">sudo</a></li>
           </b></ul>
         </div>
         <div id="content">
