--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
           <li><a href="command/pwunconv">pwunconv</a></li>
           <li><a href="command/py3compile">py3compile</a></li>
           <li><a href="command/pydoc3">pydoc3</a></li>
-          <li><a href="command/pyton3">pyton3</a></li>
+          <li><a href="command/python3">python3</a></li>
         </b></ul>
         </div>
         <div id="content">
