add vi, nano to index

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
           <h3># n</h3>
           <hr>
           <b><ul>
+            <li><a href="command/nano">nano</a></li>
           </ul></b>
         </div>
         <div id="content">
@@ -282,6 +283,7 @@
           <h3># v</h3>
           <hr>
           <b><ul>
+            <li><a href="command/vi">vi</a></li>
           </ul></b>
         </div>
         <div id="content">
