--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         div {
           font-family: 'SF Mono', 'Menlo', monospace;
           margin: 0;
-          padding: 5px 10px;
+          padding: 2px 5%;
           /*background-color: #0366D6;*/
         }
     </style>
@@ -42,7 +42,7 @@
         <h1>kaitaishinsho</h1>
     </header>
     <nav>
-        <h2>commands</h2>
+        <h1>commands</h1>
         <!-- <a href="#sectiona"># a</a>
         <a href="#sectionb"># b</a>
         <a href="#sectionc"># c</a>
@@ -70,7 +70,7 @@
         <a href="#sectiony"># y</a>
         <a href="#sectionz"># z</a> -->
         <div id="content">
-          <h3 id="sectiona"># a</h3>
+          <h2 id="sectiona"># a</h2>
           <hr>
           <ul><b>
             <li><a href="command/aa-enabled">aa-enabled</a></li>
@@ -85,14 +85,14 @@
           </b></ul>
         </div>
         <div id="content">
-          <h3># b</h3>
+          <h2># b</h2>
           <hr>
           <ul><b>
             <li><a href="command/basename">basename</a></li>
           </b></ul>
         </div>
         <div id="content">
-          <h3># c</h3>
+          <h2># c</h2>
           <hr>
           <ul><b>
             <li><a href="command/cat">cat</a></li>
@@ -103,7 +103,7 @@
           </b></ul>
         </div>
         <div id="content">
-          <h3># d</h3>
+          <h2># d</h2>
           <hr>
           <ul><b>
             <li><a href="command/date">date</a></li>
