fix command_name, index

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             <li><a href="command/cd">cd</a></li>
             <li><a href="command/chmod">chmod</a></li>
             <li><a href="command/chown">chown</a></li>
+            <li><a href="command/cp">cp</a></li>
             <li><a href="command/curl">curl</a></li>
           </b></ul>
         </div>
