--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div id="content">
           <b>
             <font size="4">
-              <a href="html/html_top">HTML TOP</a>
+              <a href="command/html_top">HTML TOP</a>
             </font>
           </b>
         </div>
